<resources>

    <string name="app_name">FormularioDOC
    </string>

    <string name="ingreseNombre">Nombre completo...
    </string>

    <string name="Telefono">Teléfono
    </string>

    <string name="Email">E-mail
    </string>

    <string name="DescripcionContacto">Descripción del contacto
    </string>

    <string name="Siguiente">Siguiente
    </string>

    <string name="Actualizando">Actualizando
    </string>

    <string name="Nombre">Nombre
    </string>

    <string name="editarDatos">Editar Datos
    </string>



</resources>
