<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="doc.cardozo.darwin.formulariodoc.MainActivity">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nombreUsuario"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:theme="@style/MiEditText"
            android:hint="@string/ingreseNombre"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/etTelefono"
            android:layout_below="@+id/nombreUsuario"
            android:layout_alignRight="@+id/nombreUsuario"
            android:layout_alignEnd="@+id/nombreUsuario"
            android:theme="@style/MiEditText"
            android:hint="@string/Telefono"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_below="@+id/etTelefono"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:theme="@style/MiEditText"
            android:hint="@string/Email"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/edDescrpcion"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etEmail"
            android:theme="@style/MiEditText"
            android:hint="@string/DescripcionContacto"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Siguiente"
            android:id="@+id/btnSiguiente"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:theme="@style/MiBotonPropio"/>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>


